<resources>
    <!--App name-->
        <string name="app_name">Appreendiendo EEG</string>

    <!--Facebook-->
        <string name="facebook_app_id">736060693236895</string>

    <!--Splash-->
        <string name="version_text">Versión 0.1 Febrero 2018</string>

    <!--Login-->
        <!--Sign In-->

            <string name="signin_forget_text">¿Olvidaste tu contraseña?</string>
            <string name="signin_remember_text">¿Olvidaste tu contraseña?</string>
            <string name="signin_user_text">Nombre de usuario o email</string>
            <string name="signin_password_text">Contraseña</string>
            <string name="signin_btn_text">Entrar</string>
            <string name="signin_btn_signup_text">Registrase</string>
            <string name="signin_other_text">O tambien inicia sesion con</string>
            <string name="signin_facebook_login_text">Facebook</string>

        <!--Sign Up-->
            <string name="signup_email_text">Email</string>
            <string name="signup_name_text">Nombre</string>
            <string name="signup_lastname_text">Apellido(s)</string>
            <string name="signup_password_signup_text">Contraseña</string>
            <string name="signup_password_confirmation_text">Confirmación</string>
            <string name="signup_btn_text">Registrarse</string>

        <!--Errors-->
            <string name="login_cancel_login">Se a cerrado el inicio de sesión</string>
            <string name="login_error_login">Ocurrió un error al iniciar sesión</string>

    <!--Home-->
    <string name="home">Home</string>

    <string name="perfil">Perfil</string>
    <string name="Bandeja">Bandeja de entrada</string>
    <string name="group">Grupo</string>
    <string name="logout">Cerrar sesión</string>

    <string name="action_search">Buscar</string>
    <string name="action_settings">Configuracion</string>

    <string name="De">De</string>
    <string name="Para">Para</string>
    <string name="Asunto">Asunto</string>
    <string name="Razones">Escriba sus razones:</string>
    <string name="txtNameGroup">Nombre del Grupo</string>
</resources>
